--- a/POS .ipynb
+++ b/POS .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -14,21 +14,19 @@
     "reload(sys)\n",
     "sys.setdefaultencoding('utf-8')\n",
     "\n",
-    "sentence = \"임종룡 금융위원장이 23일 정부는 구조조정의 기본방향을 제시하고 기업구조조정은 채권단 중심으로 흔들림 없이 추진해 나가겠다고 밝혔다. 임 위원장은 정부서울청사 입주 첫날인 이날 간부회의에서 기업구조조정은 신속하게 이뤄져야 한다며 이같이 말했다. 그는 구조조정은 해당 기업의 철저한 자구노력을 기초로 채권단 중심으로 흔들림 없이 구조조정을 추진해 나가야 한다며 정부는 구조조정의 기본방향을 제시하고, 국책은행 자본확충과 실업문제 지원 등을 통해 시장에서 원활한 구조조정이 이루어지도록 최선을 다해야 한다고 밝혔다. .\"\n",
     "\n",
+    "sentence = \"청소년 스마트폰 비디오 시청 4년 만에 85% 늘어 (서울=연합뉴스) 김윤구 기자 = 전 세계의 스마트폰 대수가 올해 3분기에 피처폰을 처음으로 추월할 것이라고 스웨덴 통신그룹 에릭슨이 1일(현지시간) 전망했다. 올해 1분기 팔린 휴대전화에서 스마트폰이 차지하는 비중은 80%에 육박했다. 파이낸셜타임스에 따르면 에릭슨은 2021년까지 스마트폰 대수가 34억대에서 63억대로 늘어날 것으로 전망했다. 하지만 스마트홈과 스마트카 등 사물인터넷(IoT)이 2018년에 휴대전화를 뛰어넘어 최대의 인터넷 연결 기기로 자리 잡을 것으로 예상됐다. 전체 280억대의 연결 기기 가운데 사물인터넷이 160억대를 차지한다는 것이다. 한편 각국 청소년이 스마트폰으로 비디오를 보는 시간이 폭발적으로 늘고 있는 것으로 나타났다. 에릭슨 보고서에 따르면 16∼19세 청소년이 집에서 스마트폰으로 TV와 동영상을 보는 시간은 2011년에서 2015년 사이 4년 만에 85%나 늘었다. 반면 전통적인 TV 스크린을 통한 시청은 같은 기간 약 절반으로 줄었다. 보고서는 스트리밍 비디오 시청이 급증했다면서 TV에서 스마트폰으로 이동하는 것은 모든 연령대에서 공통으로 나타나는 현상이지만 특히 10대에서 두드러졌다고 지적했다\"\n",
     "itemMorph = komoran.pos(sentence.decode('utf-8'))\n",
     "\n",
-    "print(sentence)\n",
+    "def nnp_extractor(article):\n",
+    "    nnp_string = \"\"\n",
+    "    for word, tag in itemMorph:\n",
+    "        if(tag == 'NNP'):\n",
+    "            nnp_string = nnp_string + word.encode('utf-8') + ' '\n",
+    "        \n",
+    "    return nnp_string\n",
     "\n",
-    "b = \"\"\n",
-    "POS = \"\"\n",
-    "for word in itemMorph:\n",
-    "    for abc in word:\n",
-    "        b = b + abc.encode('utf-8') + '/'\n",
-    "    b = b + \" + \"\n",
-    "\n",
-    "    \n",
-    "print(b)\n"
+    "print(nnp_extractor(sentence))"
    ]
   },
   {
