parsed data bug fix

--- a/File_input_code.ipynb
+++ b/File_input_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -121,19 +121,19 @@
     "    World_data.append(nnp_extractor(file.read()))\n",
     "\n",
     "\n",
-    "Parsed_data.append(Entertainment_data)\n",
-    "Parsed_data.append(Economy_data)\n",
-    "Parsed_data.append(IT_data)\n",
-    "Parsed_data.append(Politics_data)\n",
-    "Parsed_data.append(Society_data)\n",
-    "Parsed_data.append(Life_Culture_data)\n",
-    "Parsed_data.append(Sports_data)\n",
-    "Parsed_data.append(World_data)\n"
+    "Parsed_data.append(Entertainment_data) #0\n",
+    "Parsed_data.append(Economy_data) #1\n",
+    "Parsed_data.append(IT_data) #2\n",
+    "Parsed_data.append(Politics_data) #3\n",
+    "Parsed_data.append(Society_data) #4\n",
+    "Parsed_data.append(Life_Culture_data) #5\n",
+    "Parsed_data.append(Sports_data) #6\n",
+    "Parsed_data.append(World_data) #7\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
